1. Optimize the code logic related to scrolling, complete some comments, and modify some incorrect comments. 2. Improve the readability of some source code, such as variable naming. 3. Modify the className of the outermost container of the component to more recognizable and unique characters to avoid polluting other components or pages.

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,7 @@
   background: no-repeat center / 100% 100%;
 }
 
-.list {
+.__tabllist__ {
   overflow: hidden;
   box-sizing: border-box;
 
